2010-02-04  Alan McGovern  <amcgovern@novell.com>

	* StandardPropertyPathNode.cs: Remove duplicate code.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathNode.cs:
	* IPropertyPathNode.cs:
	* PropertyPathWalker.cs:
	* IndexedPropertyPathNode.cs:
	* StandardPropertyPathNode.cs: Make the new classes internal
	  and also put them in the right namespace.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathNode.cs:
	* IPropertyPathNode.cs:
	* PropertyPathWalker.cs:
	* BindingExpressionBase.cs:
	* IndexedPropertyPathNode.cs:
	* StandardPropertyPathNode.cs: Split PropertyPathNode into
	  StandardPropertyPathNode and IndexedPropertyPathNode. This
	  way a path like "List[0].Name" is split into three nodes:
	  "List" "[0]" and "Name". This simplifies the logic required
	  to update the source in a two way binding. Indexed nodes
	  also need to hook into INotifyCollectionChanged if that
	  interface has been implemented.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Move code which requires elevated
	  security attributes out of an anonymous delegate so the sec.
	  attrs. dont get messed up.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathNode.cs:
	* PropertyPathWalker.cs:
	* BindingExpressionBase.cs: Refactor the BindingExpression
	  code so that any objects which implement
	  INotifyPropertyChanged in the property path are monitored
	  for changes so that the BindingExpression can update when
	  the relevant properties are modified. This is implemented by
	  creating a linked list of PropertyPathNodes, each of which
	  represents a segment of the PropertyPath. Each node
	  hooks/unhooks from INotifyPropertyChanged and updates its
	  child nodes when a change is detected.

2010-01-29  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Add much better handling for
	  property paths which contain objects implementing