@@ -1,3 +1,10 @@
+2010-02-04  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.auto.ssc: Make StandardPropertyPath look for
+	  a DependencyProperty rather than just a PropertyInfo so that
+	  it can listen for property changed events. This fixes the
+	  volume control slider in olympics.
+
 2010-02-01  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* System.Windows.auto.ssc: Regenerated
